backend/TempExecution/a6ab4e4e31a7406bb56453bdc9da56a4_output.txt
a6ab4e4e31a7406bb56453bdc9da56a4.c:5:1: error: unknown type name 'using'
    5 | intf main() {
      | ^~~~~
a6ab4e4e31a7406bb56453bdc9da56a4.c:5:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'std'
    5 | intf main() {
      |                 ^  
a6ab4e4e31a7406bb56453bdc9da56a4.c:9:1: error: unknown type name 'intf'; did you mean 'int'?
    9 |     cout<<a+b<<'\n';
      | ^   
      | int
a6ab4e4e31a7406bb56453bdc9da56a4.c: In function 'main':
a6ab4e4e31a7406bb56453bdc9da56a4.c:15:5: error: 'cin' undeclared (first use in this function)
a6ab4e4e31a7406bb56453bdc9da56a4.c:15:5: note: each undeclared identifier is reported only once for each function it appears in
a6ab4e4e31a7406bb56453bdc9da56a4.c:17:5: error: 'cout' undeclared (first use in this function)
a6ab4e4e31a7406bb56453bdc9da56a4.c:19:11: error: 'true' undeclared (first use in this function)
a6ab4e4e31a7406bb56453bdc9da56a4.c:2:1: note: 'true' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
    1 | #include<stdio.h>
  +++ |+#include <stdbool.h>
    2 | 
